update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Gold-and-glory-or-Wild-ways-of-other-days-a-tale-of-early-American-discovery_68211
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68211-h/images/cover.jpg
 creator:
   author:
     agent_name: Stebbing, Grace
     gutenberg_agent_id: '54655'
     url: http://www.gutenberg.org/2009/agents/54655
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68211#Gold-and-glory-or-Wild-ways-of-other-days-a-tale-of-early-American-discovery
 gutenberg_issued: '2022-05-31'
 identifiers:
   gutenberg: '68211'
